--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,14 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 ipykernel = "^6.29.5"
-
-[tool.poetry.group.dev.dependencies]
-selenium = "^4.24.0"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
+sumy = "^0.11.0"
+setuptools = "^74.1.2"
+lxml = "^5.3.0"
+lxml-html-clean = "^0.2.2"
+numpy = "^2.1.1"
+fastapi = "^0.114.1"
 
 [build-system]
 requires = ["poetry-core"]
