--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ authors = ["Mohammed Ahad"]
 license = "MIT"
 readme = "README.md"
 
+[tool.poetry.scripts]
+start-api = "uvicorn api:app --reload"
+
 [tool.poetry.dependencies]
 python = "^3.12"
 ipykernel = "^6.29.5"
@@ -17,6 +20,9 @@ lxml = "^5.3.0"
 lxml-html-clean = "^0.2.2"
 numpy = "^2.1.1"
 fastapi = "^0.114.1"
+uvicorn = "^0.30.6"
+beanie = "^1.26.0"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
