add source attribute, update time value, update package name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "webscraping-fijinews"
+name = "TLDRFijiNewsAPI"
 version = "0.1.0"
 description = "scraping news for fiji"
 authors = ["Mohammed Ahad"]
