update vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,9 @@
             "src": "/(.*)",
             "dest": "main.py"
         }
-    ]
+    ],
+    "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+    }
 }
